# midi-chord-reader

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/superpowers/plans/: 2026-05-16-juce-8-upgrade.md
install/: Distribution.xml  buildinst.sh  fullbuild.sh  updateversion.sh
src/: AboutBox.cpp  AboutBox.h  ChordClipper.cpp  ChordClipper.h  ChordName.cpp  ChordName.h  ChordView.cpp  ChordView.h  MidiChordsConfig.h.in  MidiChordsTypes.h  MidiStore.cpp  MidiStore.h  OptionsComponent.cpp  OptionsComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/: CMakeLists.txt  chordClipperTest.cpp  chordNameTest.cpp  chordViewTest.cpp  midiStoreTest.cpp
